:bug: Fix truncation issue where initial width is incorrect

--- a/src/components/root.scss
+++ b/src/components/root.scss
@@ -1,7 +1,6 @@
 body {
-  min-width   : 360px;
   max-width   : 900px;
-
+  min-width   : 250px;
   margin      : 0 auto;
   font-family : 'Work Sans', sans-serif;
 }
