--- a/src/containers/userProfile/profile.scss
+++ b/src/containers/userProfile/profile.scss
@@ -27,6 +27,6 @@
   .profile-info-container {
     width      : 67%;
 
-    padding    : 15px 10px 10px 0;
+    padding    : 15px 10px 10px 5px;
     overflow   : hidden;
   }
